--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
             <p>Projeto para visualizar e criar Border-radius</p>
             <a href="/Border-radius" type="button" class="visual">Visualizar</a>
         </div>
+        <div class="itens">
+            <span>Jogo Genius</span>
+            <p>Projeto desenvolvido junto com Digital Innovation</p>
+            <a href="/Genius" type="button" class="visual">Visualizar</a>
+        </div>
     </section>  
 
     <footer class="rodape">
