--- a/index.html
+++ b/index.html
@@ -21,17 +21,17 @@
         <div class="itens">
             <span>Binario para Decimal</span>
             <p>Projeto que converte binário para decimal</p>
-            <a href="/BinaryToDecimal" type="button" class="visual">Visualizar</a>
+            <a href="index-binary.html" type="button" class="visual">Visualizar</a>
         </div>
         <div class="itens">
             <span>Border-radius</span>
             <p>Projeto para visualizar e criar Border-radius</p>
-            <a href="/Border-radius" type="button" class="visual">Visualizar</a>
+            <a href="index-radius.html" type="button" class="visual">Visualizar</a>
         </div>
         <div class="itens">
             <span>Jogo Genius</span>
             <p>Projeto desenvolvido junto com Digital Innovation</p>
-            <a href="/Genius" type="button" class="visual">Visualizar</a>
+            <a href="index-genius.html" type="button" class="visual">Visualizar</a>
         </div>
     </section>  
 
