--- a/index-genius.html
+++ b/index-genius.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Genius/style.css">
     <title>Document</title>
 </head>
 <body>
@@ -18,7 +18,7 @@
     </div>
 
 
-    <script type="text/javascript" src="script.js"></script>
+    <script type="text/javascript" src="Genius/script.js"></script>
     
 </body>
 </html>
