--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
         <div class="itens">
             <span>Binario para Decimal</span>
             <p>Projeto que converte binário para decimal</p>
-            <a href="/BinaryToDecimal" type="button" class="visual">Visualizar</a>
+            <a href="index-binary.html" type="button" class="visual">Visualizar</a>
         </div>
         <div class="itens">
             <span>Border-radius</span>
             <p>Projeto para visualizar e criar Border-radius</p>
-            <a href="/Border-radius" type="button" class="visual">Visualizar</a>
+            <a href="index-border.html" type="button" class="visual">Visualizar</a>
         </div>
         <div class="itens">
             <span>Jogo Genius</span>
