--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="itens">
             <span>Jogo Genius</span>
             <p>Projeto desenvolvido junto com Digital Innovation</p>
-            <a href="/Genius" type="button" class="visual">Visualizar</a>
+            <a href="index-genius.html" type="button" class="visual">Visualizar</a>
         </div>
     </section>  
 
