--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
             <p>Projeto desenvolvido junto com Digital Innovation</p>
             <a href="index-genius.html" type="button" class="visual">Visualizar</a>
         </div>
+        <div class="itens">
+            <span>Calculadora</span>
+            <p>Projeto de uma calculadora</p>
+            <a href="index-calculator.html" type="button" class="visual">Visualizar</a>
+        </div>
     </section>  
 
     <footer class="rodape">
