--- a/index-binary.html
+++ b/index-binary.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="BinaryToDecimal/style.css">
-    <script src="BinaryToDecimal/script.js"></script>
+    <link rel="stylesheet" href="source/BinaryToDecimal/style.css">
+    <script src="source/BinaryToDecimal/script.js"></script>
     <title>Binary to Decimal</title>
 </head>
 <body>
