--- a/index-border.html
+++ b/index-border.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Border-radius/styles.css">
+    <link rel="stylesheet" href="source/Border-radius/styles.css">
     
     <title>Border radius</title>
 </head>
@@ -37,6 +37,6 @@
             </div>
         </div>   
     </div>  
-    <script src="Border-radius/script.js"></script>
+    <script src="source/Border-radius/script.js"></script>
 </body>
 </html>
