--- a/index-calculator.html
+++ b/index-calculator.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Calculator/styles.css">
+    <link rel="stylesheet" href="source/Calculator/styles.css">
     <title>Calculator</title>
 </head>
 <body>
@@ -40,7 +40,7 @@
             </div>
         </div>
 
-        <script src="Calculator/script.js"></script>
+        <script src="source/Calculator/script.js"></script>
 
     
 </body>
