--- a/index.html
+++ b/index.html
@@ -45,6 +45,18 @@
                 <a href="index-calculator.html" class="button" type="button">Visualizar</a>
             </div>
         </section>
-    </main>   
+    </main> 
+    
+    <footer class="rodape">
+        <a href="https://github.com/Paulobittencourts" target="_blank">
+            <img src="https://img.shields.io/badge/GitHub-100000?style=for-the-badge&logo=github&logoColor=white" alt="github">
+        </a>
+        <a href="mailto:paulobittencourt94@gmail.com" target="_blank">
+            <img class="gmail" src="https://img.shields.io/badge/Gmail-D14836?style=for-the-badge&logo=gmail&logoColor=white" alt="gmail">
+        </a>
+        <a href="https://www.linkedin.com/in/bittencourts/" target="_blank">
+            <img src="https://img.shields.io/badge/LinkedIn-0077B5?style=for-the-badge&logo=linkedin&logoColor=white" alt="linkedin">
+        </a>
+    </footer>
 </body>
 </html>
