--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@
                 <p>Projeto de uma Calculadora</p>
                 <a href="index-calculator.html" class="button" type="button">Visualizar</a>
             </div>
+            <div class="itens">
+                <label>CountDown Time</label>
+                <p>Projeto de contagem regressiva</p>
+                <a href="index-cronometro.html" class="button" type="button">Visualizar</a>
+            </div>
         </section>
     </main> 
     
